namespace Sql_ide_wpf.Services.QueryEditor.Commands
{
    public interface ICommander
    {
        void Execute();
    }
}
